--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
         crossorigin='anonymous'
         referrerPolicy='no-referrer'
       />
-    <title>Buy n Sell | Market Place</title>
+    <title>Buy and Sell | Market Place</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
